samples/_failures_safe/1761189002_9c9a65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7734a024.c: In function ‘main’:
./samples/SAFE/__tmp_7734a024.c:141:13: error: expected declaration or statement at end of input
  141 |             printf("Error: Matrices cannot be multiplied (columns of first must equal rows of second).\n");
      |             ^~~~~~
./samples/SAFE/__tmp_7734a024.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7734a024.c:141:13: error: expected declaration or statement at end of input
